--- a/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
+++ b/progettoiseo/pagine_statiche/templates/layouts/components/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-primary shadow-sm px-3" style="min-height: 70px;">
     <div class="container-fluid p-0 d-flex align-items-center">
-        <a class="navbar-brand d-flex align-items-center py-2 nav-hover rounded-pill" href="/home">
+        <a class="navbar-brand d-flex align-items-center py-2 pe-2 pw-1 nav-hover rounded-pill" href="/home">
             <img src="/media/logo_progettoiseo.png" alt="Logo Progettoiseo" width="60" height="60"
                  class="rounded-circle me-2 ms-2 bg-image " style="object-fit: cover;"/>
             Home page
@@ -119,7 +119,7 @@
         {% if user.is_authenticated %}
 
         {% else %}
-           <div style="width: 4em;"> </div>
+           <div style="width: 5em;"> </div>
         {% endif %}
     </div>
 </nav>
